--- a/src/NsiSyncService.Web/NsiSyncService.Infrastructure/NsiSyncService.Infrastructure.csproj
+++ b/src/NsiSyncService.Web/NsiSyncService.Infrastructure/NsiSyncService.Infrastructure.csproj
@@ -11,8 +11,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.1.66" />
       <PackageReference Include="Microsoft.Data.SqlClient" Version="7.0.0-preview3.25342.7" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.3" />
     </ItemGroup>
 
 </Project>
