implement remaining functionality

--- a/src/NsiSyncService.Web/NsiSyncService.Core/NsiSyncService.Core.csproj
+++ b/src/NsiSyncService.Web/NsiSyncService.Core/NsiSyncService.Core.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Interfaces\INsiDirectoryService.cs" />
+    </ItemGroup>
+
 </Project>
